Las ED ya funcionan bien